[package]
name = "pumpkin-web-emscripten"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
pumpkin-solver = { path = "../pumpkin-emscripten/pumpkin-solver", default-features = false }

[[bin]]
name = "pumpkin_web"
path = "src/main.rs"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"
